--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "live-price-server",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^5.1.0"
-    }
+  "name": "live-price-server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "yahoo-finance2": "^2.4.1"
   }
-  
+}
